fixed spacing and favicon changed

--- a/src/routes/Aboutme/Aboutme.css
+++ b/src/routes/Aboutme/Aboutme.css
@@ -31,12 +31,19 @@
     color: white;
 }
 
+@media screen and (min-width: 720px){
+    .about-me-details{
+        margin: 0 auto;
+        width: 70vw;
+    }
+}
+
 
 @media screen and (min-width: 1080px){
+
     .about-me-details{
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 3rem;
     }
 }
